--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
   <head>
     <meta charset="UTF-8">
@@ -8,6 +8,19 @@
   </head>
   <body>
     <div id="app"></div>
-    <script type="module" src="/src/renderer/main.js"></script>
+    <script type="module" src="./src/renderer/main.js"></script>
   </body>
-</html>
+</html> -->
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" href="/favicon.ico" />
+  <!-- <link rel="stylesheet" href="https://at.alicdn.com/t/font_3129292_in1lvfh2eah.css" /> -->
+  <script src="https://at.alicdn.com/t/font_3129292_hgck55ryelo.js"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title><%- title %></title>
+  <body>
+    <div id="app"></div>
+    <%- injectScript %>
+  </body>
+  
+</head>
