调整数据持久化的包

--- a/index.html
+++ b/index.html
@@ -1,21 +1,22 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://at.alicdn.com/t/font_3129292_6acs7tkl1y8.js"></script>
     <title>Redis Box</title>
   </head>
   <body>
     <div id="app"></div>
     <script type="module" src="./src/renderer/main.js"></script>
   </body>
-</html> -->
-<head>
+</html>
+
+<!-- <head>
   <meta charset="UTF-8" />
   <link rel="icon" href="/favicon.ico" />
-  <!-- <link rel="stylesheet" href="https://at.alicdn.com/t/font_3129292_in1lvfh2eah.css" /> -->
-  <script src="https://at.alicdn.com/t/font_3129292_hgck55ryelo.js"></script>
+  <script src="https://at.alicdn.com/t/font_3129292_6acs7tkl1y8.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title><%- title %></title>
   <body>
@@ -23,4 +24,4 @@
     <%- injectScript %>
   </body>
   
-</head>
+</head> -->
